--- a/estilo/style.css
+++ b/estilo/style.css
@@ -39,6 +39,10 @@ section#login {
     height: 500px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgb(0, 0, 0.450);
+
+    transition: width .3, height .3;
+    transition-timing-function: ease
+    ;
 }
 
 section#login > div#imagem{
