--- a/estilo/style.css
+++ b/estilo/style.css
@@ -32,14 +32,14 @@ section#login {
     top: 50%;
     left: 50%;
     overflow: hidden; /*para deixar redondo na parte de cima da imagem*/
-
-    transform: translate(-50%, -50%);
+    
     background-color: white;
     width: 250px;
     height: 510px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgb(0, 0, 0.450);
 
+    transform: translate(-50%, -50%);
     transition: width .3, height .3;
     transition-timing-function: ease
     ;
@@ -69,10 +69,11 @@ div#formulario > p {
 
 form > div.campo{
     background-color: #5f2c82;
+    border: 2px solid #5f2c82;
     display: block;
     width: 100%;
     height: 40px;
-    border-radius: 5px;
+    border-radius: 8px;
     margin: 5px 0px;
 }
 
@@ -82,9 +83,23 @@ div.campo > label{
 
 div.campo > i{
     color: white;
-    font-size: 1.5em;
+    font-size: 1.4em;
     width: 40px;
     padding: 5px;
+}
+
+div.campo > input {
+    background-color: #5abab7;
+    font-size: 1em;
+    width: calc(100% - 45px);
+    height: 100%;
+    border-radius: 8px;
+    padding: 4px;
+    transform: translateY(-2.5px);
+}
+
+div.campo > input:focus-within{
+    background-color: white;
 }
 
 form > input[type=submit] {
